--- a/template/package.json
+++ b/template/package.json
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "mpvue-entry": "^1.5.0",
+    "mpvue-config-loader": "^0.0.3",
+    "mpvue-entry": "next",
     "mpvue-loader": "^1.1.2",
     "mpvue-webpack-target": "^1.0.0",
     "mpvue-template-compiler": "^1.0.0",
