--- a/template/src/app.json
+++ b/template/src/app.json
@@ -1,4 +1,12 @@
 {
+  "pages": [
+    "pages/index",{{#vuex}}
+    "pages/counter",{{/vuex}}
+    {
+      "path": "packageA/logs",
+      "subPackage": true
+    }
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
