--- a/template/package.json
+++ b/template/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "mpvue-config-loader": "^0.0.3",
+    "mpvue-config-loader": "^0.1.0",
     "mpvue-entry": "next",
-    "mpvue-loader": "^1.1.2",{{#router}}
-    "mpvue-router-patch": "^0.2.0",{{/router}}
+    "mpvue-loader": "^1.1.2",
+    {{#router}}
+    "mpvue-router-patch": "^0.2.0",
+    {{/router}}
     "mpvue-template-compiler": "^1.0.0",
     "mpvue-webpack-target": "^1.0.0",
     "postcss-loader": "^2.1.0",
@@ -66,6 +68,9 @@
     "ora": "^2.0.0",
     "rimraf": "^2.6.0",
     "url-loader": "^1.0.0",
+    {{#vant}}
+    "vant-weapp": "^0.4.0",
+    {{/vant}}
     "vue-style-loader": "^4.1.0",
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.0",
