--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .js,.vue src"{{/lint}}
   },
   "dependencies": {
-    "mpvue": "^1.0.0"{{#vuex}},
+    "mpvue": "^1.0.0"{{#vant}},
+    "vant-weapp": "^0.4.0"{{/vant}}{{#vuex}},
     "vuex": "^3.0.0"{{/vuex}}
   },
   "devDependencies": {
@@ -68,9 +69,6 @@
     "ora": "^2.0.0",
     "rimraf": "^2.6.0",
     "url-loader": "^1.0.0",
-    {{#vant}}
-    "vant-weapp": "^0.4.0",
-    {{/vant}}
     "vue-style-loader": "^4.1.0",
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.0",
