--- a/template/package.json
+++ b/template/package.json
@@ -68,6 +68,14 @@
     "rimraf": "^2.6.0",
     "url-loader": "^1.0.0",
     "vue-style-loader": "^4.1.0",
+    {{#if_eq csspreprocessor "less"}}
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    {{/if_eq}}
+    {{#if_eq csspreprocessor "sass"}}
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    {{/if_eq}}
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.0",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
