--- a/template/package.json
+++ b/template/package.json
@@ -5,9 +5,12 @@
   "author": "{{ author }}",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js"{{#lint}},
+    "dev": "node build/dev-server.js wx",
+    "start": "node build/dev-server.js wx",
+    "build": "node build/build.js wx",
+    "dev:my": "node build/dev-server.js my",
+    "start:my": "node build/dev-server.js my",
+    "build:my": "node build/build.js my"{{#lint}},
     "lint": "eslint --ext .js,.vue src"{{/lint}}
   },
   "dependencies": {
@@ -79,7 +82,8 @@
     "webpack": "^3.11.0",
     "webpack-merge": "^4.1.0",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
-    "webpack-mpvue-asset-plugin": "^0.1.0"
+    "webpack-mpvue-asset-plugin": "^0.1.0",
+    "webpack-mpvue-vendor-plugin": "^2.0.3"
   },
   "engines": {
     "node": ">= 4.0.0",
